--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require": {
 		"php": ">=7.0",
         "catfan/medoo": "^1.7",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "twig/html-extra": "^3.0"
     },
     "autoload": {
         "psr-4": {
