--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mikebirch/paulus-php",
+    "name": "mikebirch/amicus",
 	"type": "framework",
     "description": "A lightweight PHP MVC framework",
     "keywords" : [
