--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	"require": {
 		"php": ">=7.0",
         "twig/twig": "^3.0",
-        "twig/html-extra": "^3.0"
+        "twig/html-extra": "^3.0",
+        "filp/whoops": "^2.14"
     },
     "autoload": {
         "psr-4": {
